# screenflix

./: .gitignore  AGENTS.md  AI-CONFIG.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GABARITO.md  Makefile  STITCH_PROMPT.md  docker-compose.yml  openapi.json  pyproject.toml  schemas.json
.claude/agents/: ai-ml-dev.md  architect.md  backend-dev.md  database-dev.md  devops.md  qa-reviewer.md  security-check.md
.claude/skills/new-module/: SKILL.md
.claude/skills/quality-gate/: SKILL.md
agents/: README.md  ai-ml-development.md  architecture-planning.md  backend-development.md  database-development.md  devops-guidelines.md  qa-guidelines.md  security-check.md
docs/workshop/: README.md  ScreenFlix-Workshop.pptx  apostila.html  build_deck.py  dia-1-infra-containers.md  dia-2-programacao-pragmatica.md  dia-3-ia-no-desenvolvimento.md  roteiro-palco.html
frontend/: .env.example  README.md  index.html  package-lock.json
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: screenflix.js
frontend/src/components/: EpisodeItem.vue  MediaRow.vue  PosterCard.vue  PosterImage.vue  StatusPill.vue  TheHeader.vue  Top5Row.vue
frontend/src/lib/: media.js
frontend/src/router/: index.js
frontend/src/stores/: catalog.js
frontend/src/views/: HomeView.vue  MediaDetailView.vue  MoviesView.vue  RegisterView.vue  SeriesView.vue
requests/: screenflix.http
scripts/: init.sql
src/screenflix/: main.py
src/screenflix/core/: database.py  repository.py  settings.py
src/screenflix/core/app/: dependencies.py  middlewares.py
src/screenflix/core/logging/: config.py  context.py  logger.py
src/screenflix/core/utils/: shortcuts.py
src/screenflix/modules/catalog/adapters/: base_http_request.py  omdb_request.py  openai_analyzer.py  openai_request.py
tests/: conftest.py  test_adapters_base_http_request.py  test_adapters_omdb_request.py  test_adapters_openai_analyzer.py  test_application_register_data_workflow.py  test_core_app_dependencies.py  test_core_app_middlewares.py  test_core_database.py  test_core_logging_config_and_logger.py  test_core_logging_context.py  test_core_repository.py  test_core_settings.py  test_core_utils_shortcuts.py  test_domain_entities.py  test_infrastructure_repositories.py  test_main_app.py  test_media_count.py  test_presentation_endpoints_and_router.py  test_presentation_schemas.py
(+20 files in other folders)
