[project]
name = "screenflix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rich>=14.3.3",
    "ruff>=0.15.9",
    "testcontainers[postgres]>=4.14.2",
]

[tool.hatch.build.targets.sdist]
include = ["src/screenflix"]

[tool.hatch.build.targets.wheel]
include = ["src/screenflix"]

[tool.hatch.build.targets.wheel.sources]
"src/screenflix" = "screenflix"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ══════════════════════════════════════════════════════════════
# Tool configs
# ══════════════════════════════════════════════════════════════

# ── Ruff (linter + formatter) ───────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # bugbear
    "A",     # builtins shadowing
    "T20",   # print statements
    "SIM",   # simplify
    "ASYNC", # async linting
]
ignore = [
    "E501",  # line length — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Mypy ────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

# ── Pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: testes que dependem de containers externos (PostgreSQL)",
    "slow: testes que demoram mais de 5s",
]
